--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "jquery": "^3.6.0",
+    "ngx-bootstrap": "^6.2.0",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "uikit": "^3.6.22",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
